fix: hide scrollbar in windows

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -187,3 +187,14 @@ header svg {
     display: none;
   }
 }
+
+/* Hide scrollbars in windows */
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox (not sure if that works) */
+}
